--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>I'm Kevin and I am studying to be a software engineer And Am Passionate About The Environment And Ecosystem and helping anyone 
         or anything that is oppressed systematically
     </p> 
-    <a href="///C:/Users/87q6j/OneDrive%20-%20St.%20Lawrence%20College/Portfolio.html">Visit Portfolio.html</a>
+    <a href="portfolio.html">Visit Portfolio.html</a>
 
 <a href="#Pros and Cons of Meat">Go to Pros and Cons of Meat</a>
     <ul>
