--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My Files</h1>
-    <a href="file:///C:/Users/87q6j/OneDrive%20-%20St.%20Lawrence%20College/Index.html">This is a sample of my work</a>
+    <a href="file:///C:/Users/87q6j/OneDrive%20-%20St.%20Lawrence%20College/index.html">This is a sample of my work</a>
 </body>
 </html>
